# chinese-numbers

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  license.txt  project info.md  pyproject.toml  readme.md
src/chinese_numbers/: __init__.py  arabic.py  converter.py  digits.py  exceptions.py  group.py  utils.py
src/example/: __main__.py
src/example2/: __main__.py
src/tests/: test_arabic.py  test_arabic_groups.py  test_converter.py  test_utils.py
